Version 1.1 All works correctly